--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "git-branch-selector",
   "version": "1.1.5",
   "description": "A CLI tool for choosing local branches in yur terminal",
+  "type": "module",
   "main": "./src/index.js",
   "bin": {
     "ggb": "./src/index.js"
   },
   "scripts": {
     "lint": "eslint '**/*.js' --ignore-path .gitignore",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,15 +25,15 @@
   "author": "Christian Alares",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.0",
-    "inquirer": "^7.3.2",
-    "simple-git": "^2.12.0"
+    "chalk": "^5.0.0",
+    "inquirer": "^8.2.0",
+    "simple-git": "^3.2.6"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
