--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.0.0",
+    "fuzzy": "^0.1.3",
     "inquirer": "^8.2.0",
+    "inquirer-autocomplete-prompt": "^2.0.0",
     "simple-git": "^3.2.6"
   },
   "devDependencies": {
